findrs and findns would give errors when processing paths containing ':'. Change to using sed to filter the filenames which may also be a bit faster. Note this assumes that ':' does not occur in the description. This is safe enough I think and I verified it against my /usr/share/file/magic
git-svn-id: https://fslint.googlecode.com/svn/trunk@206 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -4,6 +4,8 @@
 		  as well as Frugalware in the "Installed Packages" function.
 		* Handle single quotes in specified paths.
 		* Support building Mandriva RPMs again from the tarball.
+		* The redundant whitespace function now doesn't display
+		  errors when processing files with ':' in the path name.
 	* Improvements:
 		* Add a context menu item to "Open Folder" of selected file.
 		* Ask for confirmation, if all copies of a duplicate
