Report/Clean empty directiry branches rather than just empty leaf directories, as suggested in issue 15.
git-svn-id: https://fslint.googlecode.com/svn/trunk@208 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -12,6 +12,8 @@
 		  are selected for deletion.
 		* Use GtkFileChooser rather than deprecated GtkFileSelection.
 		* Add Pause/Resume buttons to control long searches.
+		* In the "empty directories" function, report empty branches
+		  rather than just empty leaf directories.
 
 2.28 09/09/08
 	* Translations:
