--- a/po/el.po
+++ b/po/el.po
@@ -1,22 +1,21 @@
-# Danish translations for FSlint (da.po)
-# Danske oversættelser for pakke FSlint (da.po).
-# Copyright (C) 2007 Pádraig Brady
-# This file is distributed under the same license as the FSlint package.
-# Joe Hansen <joedalton2@yahoo.dk>, 2006.
-# Martin Willemoes Hansen har udført korrektur på oversættelsen, 2006
+# Greek translation for fslint
+# Copyright (c) 2009 Rosetta Contributors and Canonical Ltd 2009
+# This file is distributed under the same license as the fslint package.
+# Fotis Tsamis <ftsamis@gmail.com>, 2009.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: fslint\n"
-"Report-Msgid-Bugs-To: \n"
+"Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2008-09-09 12:16+0100\n"
-"PO-Revision-Date: 2009-04-30 16:54+0000\n"
-"Last-Translator: Anders Jenbo <Unknown>\n"
-"Language-Team: Danish <dansk@dansk-gruppen.dk>\n"
+"PO-Revision-Date: 2009-06-15 07:47+0000\n"
+"Last-Translator: Fotis Tsamis <Unknown>\n"
+"Language-Team: Greek <el@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Rosetta-Export-Date: 2007-06-20 19:08:13+0000\n"
+"X-Launchpad-Export-Date: 2009-07-13 00:20+0000\n"
+"X-Generator: Launchpad (build Unknown)\n"
 
 #: ../fslint.glade:8
 msgid "FSlint"
@@ -24,211 +23,213 @@ msgstr "FSlint"
 
 #: ../fslint.glade:87
 msgid "_Rename..."
-msgstr "_Omdøb..."
+msgstr "_Μετονομασία..."
 
 #: ../fslint.glade:110
 msgid "Select using wildcard"
-msgstr "Vælg med jokertegn"
+msgstr "Επιλογή με την χρήση wildcard"
 
 #: ../fslint.glade:119
 msgid "Unselect using wildcard"
-msgstr "Fravælg med jokertegn"
+msgstr "Αποεπιλογή με την χρήση wildcard"
 
 #: ../fslint.glade:128
 msgid "within groups"
-msgstr "Indenfor grupper"
+msgstr "εντός ομάδων"
 
 #: ../fslint.glade:137
 msgid "Select all but first"
-msgstr "Vælg alle undtagen første"
+msgstr "Επιλογή όλων εκτός του πρώτου"
 
 #: ../fslint.glade:146
 msgid "Select all but newest"
-msgstr "Vælg alle undtagen nyeste"
+msgstr "Επιλογή όλων εκτός του νεότερου"
 
 #: ../fslint.glade:155
 msgid "Select all but oldest"
-msgstr "Vælg alle undtagen ældste"
+msgstr "Επιλογή όλων εκτός του παλαιότερου"
 
 #: ../fslint.glade:168
 msgid "Toggle selection"
-msgstr "Til/fra markering"
+msgstr "Αλλαγή επιλογής"
 
 #: ../fslint.glade:177
 msgid "Unselect all"
-msgstr "Fravælg alle"
+msgstr "Αποεπιλογή όλων"
 
 #: ../fslint.glade:294 ../fslint.glade:547
 msgid "Add"
-msgstr "Tilføj"
+msgstr "Προσθήκη"
 
 #: ../fslint.glade:370 ../fslint.glade:623
 msgid "Remove"
-msgstr "Fjern"
+msgstr "Αφαίρεση"
 
 #: ../fslint.glade:417
 msgid "Directories to search"
-msgstr "Kataloger der søges i"
+msgstr "Κατάλογοι για αναζήτηση"
 
 #: ../fslint.glade:442
 msgid "recurse?"
-msgstr "rekursion?"
+msgstr "αναδρομικά;"
 
 #: ../fslint.glade:466
 msgid "Search path"
-msgstr "Søgesti"
+msgstr "Τοποθεσία αναζήτησης"
 
 #: ../fslint.glade:678
 msgid "Paths to exclude"
-msgstr "Søgestier der udelades"
+msgstr "Τοποθεσίες που θα εξαιρεθούν"
 
 #: ../fslint.glade:713
 msgid "Extra find parameters"
-msgstr "Yderligere søgeparametre"
+msgstr "Επιπλέον παράμετροι αναζήτησης"
 
 #: ../fslint.glade:738
 msgid "extra find filtering parameters"
-msgstr "Yderligere søge-filtreringsparametre"
+msgstr "επιπλέον παράμετροι φιλτραρίσματος αναζήτησης"
 
 #: ../fslint.glade:771
 msgid "Advanced search parameters"
-msgstr "Avancerede søgeparametre"
+msgstr "Παράμετροι αναζήτησης για προχωρημένους"
 
 #: ../fslint.glade:856 ../fslint.glade:987 ../fslint.glade:1258
 #: ../fslint.glade:1567 ../fslint.glade:1779 ../fslint.glade:2033
 #: ../fslint.glade:2154 ../fslint.glade:2326 ../fslint.glade:2459
 #: ../fslint.glade:2808
 msgid "Name"
-msgstr "Navn"
+msgstr "Όνομα"
 
 #: ../fslint.glade:875 ../fslint.glade:1277 ../fslint.glade:1586
 #: ../fslint.glade:1798 ../fslint.glade:2052 ../fslint.glade:2173
 #: ../fslint.glade:2345 ../fslint.glade:2478 ../fslint.glade:2827
 msgid "Directory"
-msgstr "Katalog"
+msgstr "Κατάλογος"
 
 #: ../fslint.glade:894 ../fslint.glade:1836 ../fslint.glade:2249
 #: ../fslint.glade:2364 ../fslint.glade:2516 ../fslint.glade:2865
 msgid "Date"
-msgstr "Dato"
+msgstr "Ημερομηνία"
 
 #: ../fslint.glade:929
 msgid "Duplicates"
-msgstr "Gengangere"
+msgstr "Αντίγραφα"
 
 #: ../fslint.glade:1006 ../fslint.glade:1605 ../fslint.glade:1817
 #: ../fslint.glade:2230 ../fslint.glade:2497 ../fslint.glade:2846
 msgid "Size"
-msgstr "Størrelse"
+msgstr "Μέγεθος"
 
 #: ../fslint.glade:1120
 msgid "Installed packages"
-msgstr "Installerede pakker"
+msgstr "Εγκατεστημένα πακέτα"
 
 #: ../fslint.glade:1161
 msgid "Sensitivity="
-msgstr "Følsomhed="
+msgstr "Ευαισθησία="
 
 #: ../fslint.glade:1205
 msgid "invalid UTF8 mode?"
-msgstr "ugyldig UTF8-tilstand?"
+msgstr "μη έγκυρη μέθοδος UTF-8;"
 
 #: ../fslint.glade:1312
 msgid "Bad names"
-msgstr "Uegnede navne"
+msgstr "Λανθασμένα ονόματα"
 
 #: ../fslint.glade:1347
 msgid "Search ("
-msgstr "Søg ("
+msgstr "Αναζήτηση ("
 
 #: ../fslint.glade:1373
 msgid "$PATH"
-msgstr "$PATH"
+msgstr "σε $PATH"
 
 #: ../fslint.glade:1392
 msgid ") for"
-msgstr ") for"
+msgstr ") για"
 
 #: ../fslint.glade:1439 ../fslint-gui:916
 msgid "Conflicting files"
-msgstr "Filer i konflikt"
+msgstr "Συγκρουόμενα αρχεία"
 
 #: ../fslint.glade:1447 ../fslint.glade:1510 ../fslint-gui:914
 #: ../fslint-gui:923
 msgid "Aliases"
-msgstr "Adressebog"
+msgstr "Ψευδώνυμα"
 
 #: ../fslint.glade:1486 ../fslint-gui:929
 msgid "Case conflicts"
-msgstr "Konflikt små/store bogstaver"
+msgstr "Αντίφαση πεζών/κεφαλαίων"
 
 #: ../fslint.glade:1494 ../fslint-gui:925
 msgid "Same names"
-msgstr "Ens navne"
+msgstr "Ίδια ονόματα"
 
 #: ../fslint.glade:1502 ../fslint-gui:927
 msgid "Same names(ignore case)"
-msgstr "Ens navne(ignorer små/store bogstaver"
+msgstr "Ίδια ονόματα(αγνοώντας πεζά/κεφαλαία)"
 
 #: ../fslint.glade:1640
 msgid "Name clashes"
-msgstr "Navnesammenfald"
+msgstr "Συγκρουόμενα ονόματα"
 
 #: ../fslint.glade:1675
 msgid "More restrictive search for core files"
-msgstr "Yderligere restriktiv søgning efter programfiler"
+msgstr ""
 
 #: ../fslint.glade:1677
 msgid "core file mode?"
-msgstr "programfil-tilstand?"
+msgstr ""
 
 #: ../fslint.glade:1701
 msgid "days"
-msgstr "dage"
+msgstr "ημέρες"
 
 #: ../fslint.glade:1721
 msgid "minimum age"
-msgstr "minimumsalder"
+msgstr "ελάχιστη ηλικία"
 
 #: ../fslint.glade:1871
 msgid "Temp files"
-msgstr "Midlertidige filer"
+msgstr "Προσωρινά αρχεία"
 
 #: ../fslint.glade:1907
 msgid "Dangling"
-msgstr "Ikke afklaret"
+msgstr ""
 
 #: ../fslint.glade:1925
 msgid "Absolute links to paths within or below the link's directory"
-msgstr "Henvisning til stier indenfor eller under henvisningens katalog"
+msgstr ""
+"Απόλυτοι σύνδεσμοι προς τις διαδρομές εντός ή εκτός του καταλόγου του "
+"συνδέσμου"
 
 #: ../fslint.glade:1927
 msgid "Suspect"
-msgstr "Mistænkelig"
+msgstr "Ύποπτο"
 
 #: ../fslint.glade:1947
 msgid "Relative"
-msgstr "Relativ"
+msgstr "Σχετικό"
 
 #: ../fslint.glade:1967
 msgid "Absolute"
-msgstr "Absolut"
+msgstr "Απόλυτος"
 
 #: ../fslint.glade:1986
 msgid "/././. ///// /../ etc."
-msgstr "/././. ///// /../ etc."
+msgstr "/././. ///// /../ κτλ."
 
 #: ../fslint.glade:1988
 msgid "Redundant naming"
-msgstr "Redundant navngivning"
+msgstr "Πλεονάζουσα ονομασία"
 
 #: ../fslint.glade:2071
 msgid "Target"
-msgstr "Mål"
+msgstr "Προορισμός"
 
 #: ../fslint.glade:2106
 msgid "Bad symlinks"
-msgstr "Ugyldig symbolsk henvisning"
+msgstr "Λανθασμένοι symlinks"
 
 #: ../fslint.glade:2192
 msgid "UID"
@@ -240,312 +241,313 @@ msgstr "GID"
 
 #: ../fslint.glade:2284
 msgid "Bad IDs"
-msgstr "Ugyldige ID'er"
+msgstr "Λανθασμένα IDs"
 
 #: ../fslint.glade:2392 ../fslint-gui:561
 msgid "Empty directories"
-msgstr "Tomme kataloger"
+msgstr "Κενοί κατάλογοι"
 
 #: ../fslint.glade:2422
 msgid "Search $PATH"
-msgstr "Søg $PATH"
+msgstr "Αναζήτηση σε $PATH"
 
-# "Programmer med fejlfindingsinformation" is too long
 #: ../fslint.glade:2551
 msgid "Non stripped binaries"
-msgstr "Non stripped binaries"
+msgstr ""
 
 #: ../fslint.glade:2637
 msgid "bad indenting for indent width"
-msgstr "Forkert indryk vedrørende indrykningsbredde"
+msgstr ""
 
 #: ../fslint.glade:2745
 msgid "whitespace at end of line"
-msgstr "mellemrum ved slutningen"
+msgstr "κενό στο τέλος της γραμμής"
 
 #: ../fslint.glade:2900
 msgid "Redundant whitespace"
-msgstr "Redundant mellemrum"
+msgstr "Περιττά κενά"
 
 #: ../fslint.glade:2986
 msgid "Find"
-msgstr "Find"
+msgstr "Εύρεση"
 
 #: ../fslint.glade:3061
 msgid "Stop"
-msgstr "Stop"
+msgstr "Διακοπή"
 
 #: ../fslint.glade:3149
 msgid "Select"
-msgstr "Vælg"
+msgstr "Επιλογή"
 
 #: ../fslint.glade:3180
 msgid "Save (selected) list to file"
-msgstr "Gem (valgte) liste i en fil"
+msgstr "Αποθήκευση (επιλεγμένης) λίστας σε αρχείο"
 
 #: ../fslint.glade:3225
 msgid "Save"
-msgstr "Gem"
+msgstr "Αποθήκευση"
 
 #: ../fslint.glade:3256 ../fslint.glade:3408
 msgid "selected"
-msgstr "valgt"
+msgstr "επιλεγμένων"
 
 #: ../fslint.glade:3301
 msgid "Delete"
-msgstr "Slet"
+msgstr "Διαγραφή"
 
 #: ../fslint.glade:3332
 msgid ""
 "All (except selected) using hardlinks\n"
 "(or symlinks if on a different filesystem)"
 msgstr ""
-"Alle (undtagen valgte) der bruger fast henvisning\n"
-"(eller symbolsk henvisning hvis på et andet filsystem)"
 
 #: ../fslint.glade:3378
 msgid "Merge"
-msgstr "Sammenflet"
+msgstr "Συγχώνευση"
 
 #: ../fslint.glade:3453
 msgid "Clean"
-msgstr "Rens"
+msgstr "Καθαρισμός"
 
 #: ../fslint.glade:3585
 msgid "Select Path"
-msgstr "Vælg sti"
+msgstr "Επιλογή τοποθεσίας"
 
 #: ../fslint.glade:3736
 msgid "ask me this in future?"
-msgstr "spørg mig om dette i fremtiden?"
+msgstr "Να γίνει ερώτηση στο μέλλον;"
 
 #: ../fslint-gui:167
 #, python-format
 msgid "Usage: %s [OPTION] [PATHS]"
-msgstr "Brug: %s [OPTION] [PATHS]"
+msgstr "Χρήση: %s [ΕΠΙΛΟΓΗ] [ΤΟΠΟΘΕΣΙΕΣ]"
 
 #: ../fslint-gui:168
 msgid "display version"
-msgstr "vis version"
+msgstr "εμφάνιση έκδοσης"
 
 #: ../fslint-gui:169
 msgid "display help"
-msgstr "vis hjælp"
+msgstr "εμφάνιση βοήθειας"
 
 #: ../fslint-gui:402
 #, python-format
 msgid "%(percent)s of %(disk)s is used leaving %(size)sB available"
-msgstr "%(percent)s af %(disk)s er anvendt og %(size)sB er tilgængelig"
+msgstr ""
+"το %(percent)s του %(disk)s χρησιμοποιείται αφήνοντας %(size)sB διαθέσιμα"
 
 #: ../fslint-gui:513
 msgid "Do you want to overwrite?\n"
-msgstr "Ønsker du at overskrive?\n"
+msgstr "Θέλετε να γίνει αντικατάσταση;\n"
 
 #: ../fslint-gui:519
 msgid "You can't overwrite "
-msgstr "Du kan ikke overskrive "
+msgstr "Δεν μπορείτε να αντικαταστήσετε. "
 
 #: ../fslint-gui:554
 msgid "Files with the same content"
-msgstr "Filer med det samme indhold"
+msgstr "Αρχεία με το ίδιο περιεχόμενο"
 
 #: ../fslint-gui:555
 msgid "Installed packages ordered by disk usage"
-msgstr "Installerede pakker krævet af harddiskforbrug"
+msgstr "Εγκατεστημένα αρχεία με σειρά χρήσης δίσκου"
 
 #: ../fslint-gui:556
 msgid "Problematic filenames"
-msgstr "Problematiske filnavne"
+msgstr "Προβληματικά ονόματα αρχείων"
 
 #: ../fslint-gui:557
 msgid "Possibly conflicting commands or filenames"
-msgstr "Mulig konflikt med kommandoer eller filnavne"
+msgstr "Πιθανά συγκρουόμενες εντολές ή ονόματα αρχείων"
 
 #: ../fslint-gui:558
 msgid "Possibly old temporary files"
-msgstr "Muligvis gamle midlertidige filer"
+msgstr "Πιθανά παλιά προσωρινά αρχεία"
 
 #: ../fslint-gui:559
 msgid "Problematic symbolic links"
-msgstr "Problematiske symbolske henvisninger"
+msgstr "Προβληματικοί συμβολικοί σύνδεσμοι"
 
 #: ../fslint-gui:560
 msgid "Files with missing user IDs"
-msgstr "Filer med manglende bruger ID"
+msgstr "Αρχεία χωρίς ID χρήστη"
 
 #: ../fslint-gui:562
 msgid "Executables still containing debugging info"
-msgstr "Programmer der stadig indeholder fejlsøgningsinformation"
+msgstr "Εκτελέσιμα που περιέχουν ακόμη πληροφορίες αποσφαλμάτωσης"
 
 #: ../fslint-gui:563
 msgid "Erroneous whitespace in a text file"
-msgstr "Fejlbehæftet mellemrum i en tekstfil"
+msgstr "Λανθασμένα κενά σε ένα αρχείο κειμένου"
 
 #: ../fslint-gui:569
 msgid "Invalid path ["
-msgstr "Ugyldig sti ["
+msgstr "Λανθασμένη τοποθεσία ["
 
 #: ../fslint-gui:610
 msgid "searching"
-msgstr "søger"
+msgstr "γίνεται αναζήτηση"
 
 #: ../fslint-gui:620
 msgid "processing..."
-msgstr "bearbejder..."
+msgstr "Γίνεται επεξεργασία..."
 
 #: ../fslint-gui:648
 msgid "No search paths specified"
-msgstr "Ingen søgesti valgt"
+msgstr "Δεν ορίστηκαν τοποθεσίες για αναζήτηση"
 
 #: ../fslint-gui:793
 msgid ""
 "Sorry, FSlint does not support this functionality on your system at present."
 msgstr ""
-"Beklager, FSlint understøtter ikke denne funktionalitet på dit system for "
-"nuværende."
+"Συγνώμη, Το FSlint δεν υποστηρίζει αυτή τη λειτουργία στο σύστημα σας προς "
+"το παρόν."
 
 #: ../fslint-gui:809
 msgid " packages, "
-msgstr " pakker, "
+msgstr " πακέτα, "
 
 #: ../fslint-gui:810
 #, python-format
 msgid "consuming %sB. "
-msgstr "Forbruger %sB. "
+msgstr "που καταναλώνουν %sB. "
 
 #: ../fslint-gui:811
 #, python-format
 msgid "Note %s."
-msgstr "Bemærk %s."
+msgstr "Σημειώστε πως %s."
 
 #: ../fslint-gui:830 ../fslint-gui:870 ../fslint-gui:908 ../fslint-gui:970
 msgid " files"
-msgstr " filer"
+msgstr " αρχεία"
 
 #: ../fslint-gui:850
 msgid " unstripped binaries"
-msgstr " ikke fjernet binarier"
+msgstr ""
 
 #: ../fslint-gui:859
 msgid " empty directories"
-msgstr " tomme kataloger"
+msgstr " κενοί κατάλογοι"
 
 #: ../fslint-gui:891
 msgid " links"
-msgstr " henvisninger"
+msgstr " σύνδεσμοι"
 
 #: ../fslint-gui:907 ../fslint-gui:1023
 msgid " bytes wasted in "
-msgstr " byte bortødslet i "
+msgstr " bytes πάνε χαμένα σε "
 
 #: ../fslint-gui:953 ../fslint-gui:1024
 msgid " files (in "
-msgstr " filer (i "
+msgstr " αρχεία (σε "
 
 #: ../fslint-gui:954 ../fslint-gui:1025
 msgid " groups)"
-msgstr " grupper)"
+msgstr " ομάδες)"
 
 #: ../fslint-gui:1015
 msgid "bytes wasted"
-msgstr "byte bortødslet"
+msgstr "bytes πάνε χαμένα"
 
 #: ../fslint-gui:1098
 msgid "None selected"
-msgstr "Ingen valg foretaget"
+msgstr "Δεν επιλέχθηκε τίποτα"
 
 #: ../fslint-gui:1102
 msgid " this item?\n"
-msgstr " dette punkt?\n"
+msgstr " αυτό το αντικείμενο;\n"
 
 #: ../fslint-gui:1104
 #, python-format
 msgid " these %d items?\n"
-msgstr " disse %d punkter?\n"
+msgstr " αυτά τα %d αντικείμενα;\n"
 
 #: ../fslint-gui:1249
 msgid "User aborted"
-msgstr "Bruger afbrudt"
+msgstr "Ακυρώθηκε από τον χρήστη"
 
 #: ../fslint-gui:1378
 msgid "Error starting xdg-open"
-msgstr "Fejl under opstarten af xdg-open"
+msgstr "Σφάλμα κατά την εκκίνηση του xdg-open"
 
 #: ../fslint-gui:1390
 msgid "Rename:"
-msgstr "Omdøb:"
+msgstr "Μετονομασία:"
 
 #: ../fslint-gui:1401 ../fslint-gui:1442
 #, python-format
 msgid "Error: [%s] can not be represented on your file system"
-msgstr "Fejl: [%s] kan ikke være repræsenteret på dit filsystem"
+msgstr "Σφάλμα: το [%s] δε μπορεί να αναπαρασταθεί στο σύστημα αρχείων σας"
 
 #: ../fslint-gui:1411
 #, python-format
 msgid "Error: Can't rename [%(old_path)s] as [%(new_path)s] exists"
-msgstr "Fejl: Kan ikke omdøbe [%(old_path)s] da [%(new_path)s] eksisterer"
+msgstr ""
+"Σφάλμα: Αδύνατη η μετονομασία του [%(old_path)s] καθώς το [%(new_path)s] "
+"υπάρχει ήδη"
 
 #: ../fslint-gui:1431
 msgid "wildcard:"
-msgstr "Jokertegn:"
+msgstr "χαρακτήρας αναπλήρωσης:"
 
 #: ../fslint-gui:1606
 msgid "Sorry, you must be root to delete system packages."
-msgstr "Beklager, du skal være administrator for at slette systempakker."
+msgstr ""
+"Συγνώμη, θα πρέπει να είστε root για να διαγράψετε πακέτα συστήματος."
 
 #: ../fslint-gui:1611
 msgid "Are you sure you want to delete"
-msgstr "Er du sikker på at du ønsker at slette"
+msgstr "Θέλετε σίγουρα να διαγράψετε"
 
 #: ../fslint-gui:1628
 msgid "Calculating dependencies..."
-msgstr "Udregner afhængigheder..."
+msgstr "Γίνεται υπολογισμός εξαρτήσεων..."
 
 #: ../fslint-gui:1646
 #, python-format
 msgid "%d extra packages need to be deleted.\n"
-msgstr "%d yderligere pakker skal slettes.\n"
+msgstr "%d επιπλέον πακέτα χρειάζεται να διαγραφούν.\n"
 
 #: ../fslint-gui:1647
 msgid "Please review the updated selection."
-msgstr "Gennemse venligst det opdaterede valg."
+msgstr "Παρακαλώ ελέγξτε την ενημερωμένη επιλογή."
 
 #: ../fslint-gui:1655
 msgid "Removing packages..."
-msgstr "Fjerner pakker..."
+msgstr "Γίνεται αφαίρεση πακέτων..."
 
 #: ../fslint-gui:1689
 msgid " items deleted"
-msgstr " punkter slettet"
+msgstr " αντικείμενα διαγράφηκαν"
 
 #: ../fslint-gui:1702
 msgid "Are you sure you want to merge ALL files?\n"
-msgstr "Er du sikker du ønsker at flette ALLE filer?\n"
+msgstr "Θέλετε σίγουρα να γίνει συγχώνευση ΟΛΩΝ των αρχείων;\n"
 
 #: ../fslint-gui:1706
 msgid "(Ignoring those selected)\n"
-msgstr "(Ignorerer de valgte)\n"
+msgstr "(Αγνόηση των επιλεγμένων)\n"
 
 #: ../fslint-gui:1754
 msgid "Which indenting method do you want to convert to?"
-msgstr "Hvilken indrykningsmetode ønsker du at skifte til?"
+msgstr ""
 
 #: ../fslint-gui:1755
 msgid "Tabs"
-msgstr "Faneblade"
+msgstr ""
 
 #: ../fslint-gui:1755
 msgid "Spaces"
-msgstr "Mellemrum"
+msgstr "Κενά"
 
 #: ../fslint-gui:1766
 msgid "Are you sure you want to clean"
-msgstr "Er du sikker på, at du ønsker at rydde op"
+msgstr "Θέλετε σίγουρα να καθαρίσετε"
 
 #: ../fslint-gui:1810
 msgid " items cleaned ("
-msgstr " punkter ryddet op ("
+msgstr " αντικείμενα καθαρίστηκαν ("
 
 #: ../fslint-gui:1811
 msgid " bytes saved)"
-msgstr " byte gemt)"
+msgstr " bytes ελευθερώθηκαν)"
