--- a/po/fr.po
+++ b/po/fr.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: fslint\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-09-09 12:16+0100\n"
-"PO-Revision-Date: 2008-06-02 17:21+0000\n"
-"Last-Translator: phil90 <Unknown>\n"
+"PO-Revision-Date: 2009-07-05 07:29+0000\n"
+"Last-Translator: jamaique <Unknown>\n"
 "Language-Team: French <traduc@traduc.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2008-07-11 11:00+0000\n"
+"X-Launchpad-Export-Date: 2009-07-13 00:20+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: ../fslint.glade:8
@@ -465,7 +465,7 @@ msgstr "Arrêt par l'usager"
 
 #: ../fslint-gui:1378
 msgid "Error starting xdg-open"
-msgstr ""
+msgstr "Erreur au lancement de xdg-open"
 
 #: ../fslint-gui:1390
 msgid "Rename:"
