--- a/po/he.po
+++ b/po/he.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: fslint\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-09-09 12:16+0100\n"
-"PO-Revision-Date: 2007-09-24 19:58+0000\n"
-"Last-Translator: Dotan Mazor <launchpad@dotanmazor.com>\n"
+"PO-Revision-Date: 2008-11-07 00:12+0000\n"
+"Last-Translator: Yaron <sh.yaron@gmail.com>\n"
 "Language-Team: Hebrew <he@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2008-05-15 10:20+0000\n"
+"X-Launchpad-Export-Date: 2009-07-13 00:20+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: ../fslint.glade:8
@@ -215,11 +215,11 @@ msgstr "אבסולוטי"
 
 #: ../fslint.glade:1986
 msgid "/././. ///// /../ etc."
-msgstr ""
+msgstr "/././. ///// /../ וכו'."
 
 #: ../fslint.glade:1988
 msgid "Redundant naming"
-msgstr ""
+msgstr "מתן שם עודף"
 
 #: ../fslint.glade:2071
 msgid "Target"
@@ -256,7 +256,7 @@ msgstr "קבצים בינאריים שלא הוסר מהם מידע הדיבוג
 
 #: ../fslint.glade:2637
 msgid "bad indenting for indent width"
-msgstr ""
+msgstr "הזחה שגויה לרוחב ההזחה"
 
 #: ../fslint.glade:2745
 msgid "whitespace at end of line"
@@ -316,12 +316,12 @@ msgstr "בחירת נתיב"
 
 #: ../fslint.glade:3736
 msgid "ask me this in future?"
-msgstr ""
+msgstr "שאל אותי בעתיד?"
 
 #: ../fslint-gui:167
 #, python-format
 msgid "Usage: %s [OPTION] [PATHS]"
-msgstr ""
+msgstr "שימוש: %s [OPTION] [PATHS]"
 
 #: ../fslint-gui:168
 msgid "display version"
@@ -334,7 +334,7 @@ msgstr "הצגת עזרה"
 #: ../fslint-gui:402
 #, python-format
 msgid "%(percent)s of %(disk)s is used leaving %(size)sB available"
-msgstr ""
+msgstr "%(percent)s מתוך %(disk)s בשימוש ובכך מותירים %(size)sB פנויים"
 
 #: ../fslint-gui:513
 msgid "Do you want to overwrite?\n"
@@ -408,12 +408,12 @@ msgstr " חבילות "
 #: ../fslint-gui:810
 #, python-format
 msgid "consuming %sB. "
-msgstr ""
+msgstr "צורכים %sB. "
 
 #: ../fslint-gui:811
 #, python-format
 msgid "Note %s."
-msgstr ""
+msgstr "הערה %s."
 
 #: ../fslint-gui:830 ../fslint-gui:870 ../fslint-gui:908 ../fslint-gui:970
 msgid " files"
@@ -466,7 +466,7 @@ msgstr "המשתמש הפסיק"
 
 #: ../fslint-gui:1378
 msgid "Error starting xdg-open"
-msgstr ""
+msgstr "שגיאה בהפעלת xdg-open"
 
 #: ../fslint-gui:1390
 msgid "Rename:"
@@ -475,12 +475,13 @@ msgstr "שינוי שם:"
 #: ../fslint-gui:1401 ../fslint-gui:1442
 #, python-format
 msgid "Error: [%s] can not be represented on your file system"
-msgstr ""
+msgstr "שגיאה: לא ניתן לייצג את [%s] במערכת הקבצים שלך"
 
 #: ../fslint-gui:1411
 #, python-format
 msgid "Error: Can't rename [%(old_path)s] as [%(new_path)s] exists"
 msgstr ""
+"שגיאה: לא ניתן לשנות את שם הנתיב של [%(old_path)s] בזמן ש־[%(new_path)s] קיים"
 
 #: ../fslint-gui:1431
 msgid "wildcard:"
@@ -525,7 +526,7 @@ msgstr "(בלי להתחשב בנבחרים)\n"
 
 #: ../fslint-gui:1754
 msgid "Which indenting method do you want to convert to?"
-msgstr ""
+msgstr "לאיזו שיטת הזחה ברצונך להמיר?"
 
 #: ../fslint-gui:1755
 msgid "Tabs"
