--- a/po/nl.po
+++ b/po/nl.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: fslint\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-09-09 12:16+0100\n"
-"PO-Revision-Date: 2008-08-17 06:54+0000\n"
-"Last-Translator: Clouds <Unknown>\n"
+"PO-Revision-Date: 2009-05-05 07:17+0000\n"
+"Last-Translator: Dirk Tas <Unknown>\n"
 "Language-Team: Dutch <vertaling@nl.linux.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2008-09-09 10:44+0000\n"
+"X-Launchpad-Export-Date: 2009-07-13 00:20+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: ../fslint.glade:8
@@ -55,7 +55,7 @@ msgstr "Selectie omkeren"
 
 #: ../fslint.glade:177
 msgid "Unselect all"
-msgstr "Alles deselecteren"
+msgstr "Deselecteer alle"
 
 #: ../fslint.glade:294 ../fslint.glade:547
 msgid "Add"
@@ -276,11 +276,11 @@ msgstr "Stoppen"
 
 #: ../fslint.glade:3149
 msgid "Select"
-msgstr "Selecteren"
+msgstr "Selecteer"
 
 #: ../fslint.glade:3180
 msgid "Save (selected) list to file"
-msgstr "lijst naar bestand"
+msgstr "Schrijf (geselecteerde) lijst naar bestand"
 
 #: ../fslint.glade:3225
 msgid "Save"
@@ -298,7 +298,9 @@ msgstr "Verwijderen"
 msgid ""
 "All (except selected) using hardlinks\n"
 "(or symlinks if on a different filesystem)"
-msgstr "Alle (behalve geselecteerde) met harde koppelingen"
+msgstr ""
+"Alle (Behalve de geselecteerde) met hardlinks\n"
+"(of symbolische links indien een ander bestandssysteem)"
 
 #: ../fslint.glade:3378
 msgid "Merge"
@@ -465,7 +467,7 @@ msgstr "Afgebroken door gebruiker"
 
 #: ../fslint-gui:1378
 msgid "Error starting xdg-open"
-msgstr ""
+msgstr "Fout met starten xdg-open"
 
 #: ../fslint-gui:1390
 msgid "Rename:"
