--- a/po/sv.po
+++ b/po/sv.po
@@ -8,12 +8,14 @@ msgstr ""
 "Project-Id-Version: fslint\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-09-09 12:16+0100\n"
-"PO-Revision-Date: 2007-09-19 19:33+0100\n"
-"Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
+"PO-Revision-Date: 2008-10-27 11:40+0000\n"
+"Last-Translator: Daniel Nylander <yeager@ubuntu.com>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Launchpad-Export-Date: 2009-07-13 00:20+0000\n"
+"X-Generator: Launchpad (build Unknown)\n"
 
 #: ../fslint.glade:8
 msgid "FSlint"
@@ -315,7 +317,7 @@ msgstr "Välj sökväg"
 
 #: ../fslint.glade:3736
 msgid "ask me this in future?"
-msgstr ""
+msgstr "fråga mig detta i framtiden?"
 
 #: ../fslint-gui:167
 #, python-format
@@ -468,7 +470,7 @@ msgstr "Användaren avbröt"
 
 #: ../fslint-gui:1378
 msgid "Error starting xdg-open"
-msgstr ""
+msgstr "Fel vid start av xdg-open"
 
 #: ../fslint-gui:1390
 msgid "Rename:"
