--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -7,13 +7,13 @@ msgstr ""
 "Project-Id-Version: fslint\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-09-09 12:16+0100\n"
-"PO-Revision-Date: 2007-09-24 21:12+0000\n"
+"PO-Revision-Date: 2009-02-14 13:37+0000\n"
 "Last-Translator: rainofchaos <rainofchaos@gmail.com>\n"
 "Language-Team: Seann Liu <Seann.Liu@gmail.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2008-05-15 10:20+0000\n"
+"X-Launchpad-Export-Date: 2009-07-13 00:20+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: ../fslint.glade:8
@@ -251,7 +251,7 @@ msgstr "查找 $PATH"
 # This is too long: "未剥离（strip）的二进制程序"
 #: ../fslint.glade:2551
 msgid "Non stripped binaries"
-msgstr "未剥离（strip）的二进制程序"
+msgstr "没剥离的二进制文件"
 
 #: ../fslint.glade:2637
 msgid "bad indenting for indent width"
@@ -465,7 +465,7 @@ msgstr "用户取消"
 
 #: ../fslint-gui:1378
 msgid "Error starting xdg-open"
-msgstr ""
+msgstr "启用 xdg-open 时出现问题"
 
 #: ../fslint-gui:1390
 msgid "Rename:"
