As we're increasing the GTK+ requirement to 2.4 (March 2004), we might as well increase the python requirement to 2.3 (Jul 2003). This allows use to use True/False/generators etc. unconditonally. Also when doing this I changed all instances of old=old+1 to the old+=1 form, and to find all instances I used: grep --line-num -E " +([^ ]+) ?= ?\1 ?[-+*/%&|]"
git-svn-id: https://fslint.googlecode.com/svn/trunk@212 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -14,6 +14,7 @@
 		* Ask for confirmation, if all copies of a duplicate
 		  are selected for deletion.
 		* Use GtkFileChooser rather than deprecated GtkFileSelection.
+		  Note we now require GTK+ >= 2.4 and python >= 2.3.
 		* Add Pause/Resume buttons to control long searches.
 		* In the "empty directories" function, report empty branches
 		  rather than just empty leaf directories.
