Update the German translation contributed by debian.
git-svn-id: https://fslint.googlecode.com/svn/trunk@216 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -1,7 +1,7 @@
 2.29 dd/mm/yy
 	* Translations:
-		* Added: Greek, Finnish, Hungarian.
-		* Updated: Chinese, Danish, Dutch, Hebrew, Italian, Swedish.
+		* Added: Greek,Finnish,Hungarian.
+		* Updated: Chinese,Danish,Dutch,German,Hebrew,Italian,Swedish.
 	* Fixes:
 		* Patch from Marcus Habermehl to support Arch linux
 		  as well as Frugalware in the "Installed Packages" function.
