This should have been part of r190. Add the debian bug num to the changelog so that it's auto-closed.
git-svn-id: https://fslint.googlecode.com/svn/trunk@219 494acc53-a219-0410-adff-8f8ff343f446

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ fslint (2.29-1) unstable; urgency=low
 
   * Bump to devel version
   * Add the debian updated German translation (Closes: 503232)
+  * Add findutils as a dependency (Closes: 511805)
 
  -- pádraig brady <p@draigbrady.com>  tue, 09 sep 2008 10:39:00 +0000
 
