Tweaks to keep package lintian clean:   E: fslint: depends-on-essential-package-without-using-version depends: findutils   I: fslint: hyphen-used-as-minus-sign usr/share/man/man1/fslint-gui.1.gz:14
git-svn-id: https://fslint.googlecode.com/svn/trunk@225 494acc53-a219-0410-adff-8f8ff343f446

--- a/man/fslint-gui.1
+++ b/man/fslint-gui.1
@@ -11,7 +11,7 @@ including duplicate files and problematic filenames etc.
 .PP
 To access the individual command line tools one can change to, or add
 to $PATH the /usr/share/fslint/fslint directory on a standard install.
-Each of the commands in that directory have a --help option which
+Each of the commands in that directory have a \-\-help option which
 further details their parameters.
 .SH PARAMETERS
 If [PATHS] are specified, they become the default search path,
