Sync the debian lintian cleanups from the 2.40 release
git-svn-id: https://fslint.googlecode.com/svn/trunk@230 494acc53-a219-0410-adff-8f8ff343f446

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,7 +2,13 @@ fslint (2.41-1) unstable; urgency=low
 
   * bump to devel version
 
- -- pádraig brady <p@draigbrady.com>  tue, 21 jul 2009 01:58:00 +0000
+ -- Pádraig Brady <P@draigBrady.com>  tue, 21 jul 2009 01:58:00 +0000
+
+fslint (2.40-2) unstable; urgency=low
+
+  * Fixup warnings from running lintian on source package
+
+ -- Pádraig Brady <P@draigBrady.com>  thu, 23 jul 2009 09:27:00 +0000
 
 fslint (2.40-1) unstable; urgency=low
 
